# cppUpdater

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Changes.cpp  Changes.hpp  ClientCommunication.cpp  ClientCommunication.hpp  ClientDispatcher.cpp  ClientDispatcher.hpp  ClientHandler.cpp  ClientHandler.hpp  Connection.cpp  Connection.hpp  ProtocolUtil.cpp  ProtocolUtil.hpp  ServerCommunication.cpp  ServerCommunication.hpp  ServerConnector.hpp  Version.cpp  Version.hpp  VersionDb.cpp  VersionDb.hpp
src/filesystem/: FileUpdater.cpp  FileUpdater.hpp
src/networking/: Connection.cpp  Connection.hpp  ConnectionListener.cpp  ConnectionListener.hpp  ServerConnector.cpp  ServerConnector.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServerConnector.cpp  TcpServerConnector.hpp
src/util/: Logger.cpp  Logger.hpp
tests/: ClientServerCommunicationTest.cpp  Mocks.hpp  exampleTest.cpp  protocolTest.cpp  versionDbTest.cpp
